--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 3452",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
-    "@next/swc-wasm-nodejs": "13.5.1",
+    "@langchain/community": "0.3.5",
+    "@langchain/core": "0.3.11",
+    "@langchain/openai": "0.3.7",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -44,9 +46,9 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@supabase/supabase-js": "^2.39.8",
     "@types/node": "20.6.2",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
-       "@uppy/compressor": "^2.1.0",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1",
+    "@uppy/compressor": "^2.1.0",
     "@uppy/core": "^4.2.0",
     "@uppy/dashboard": "^4.1.0",
     "@uppy/drag-drop": "^4.0.2",
@@ -65,23 +67,19 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.5.1",
+    "eslint-config-next": "14.2.15",
     "input-otp": "^1.2.4",
-    "@langchain/community": "0.3.5",
-    "@langchain/core": "0.3.11",
-    "@langchain/langgraph": "0.2.15",
-    "@langchain/langgraph-sdk": "0.0.16",
-    "@langchain/openai": "0.3.7",
+    "json-schema-to-zod": "^2.4.1",
     "langchain": "0.3.2",
     "langsmith": "0.1.65",
     "lucide-react": "^0.446.0",
-    "next": "13.5.1",
+    "next": "14.2.15",
     "next-themes": "^0.3.0",
     "openai": "^4.29.2",
     "postcss": "8.4.30",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.53.0",
     "react-json-editor-ajrm": "^2.5.14",
     "react-resizable-panels": "^2.1.3",
